[Build] Switch `:native:native.tests` to `test-inputs-check-v2`
KTI-3337