@@ -2,7 +2,7 @@ plugins {
     kotlin("jvm")
     id("java-test-fixtures")
     id("project-tests-convention")
-    id("test-inputs-check")
+    id("test-inputs-check-v2")
 }
 
 dependencies {
@@ -114,11 +114,6 @@ projectTests {
                 kotlinBuildProperties.stringProperty("kotlin.native.pathToDarwinDist").orNull != null
             )
         }
-
-        // To workaround KTI-2421, we make these tests run on JDK 11 instead of the project-default JDK 8.
-        // Kotlin test infra uses reflection to access JDK internals.
-        // With JDK 11, some JVM args are required to silence the warnings caused by that:
-        jvmArgs("--add-opens=java.base/java.io=ALL-UNNAMED")
     }
 
     testGenerator("org.jetbrains.kotlin.generators.tests.GenerateNativeTestsKt", generateTestsInBuildDirectory = true) {
